GL/Projet_GL/src/test/deca/context/invalid/sansObjet/if/invalid_if_float_condition.deca
// Test : if_condition_float
// But : interdire une condition if non booléenne.
// Couvre : typage des conditions.
// Résultat attendu : erreur contextuelle.
// Erreur affichée: If condition must be of type boolean

{
    if (3.14) {
        println("x");
    }
}
